--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>HTML and CSS layout</title>
+</head>
+<body>
+    <div class="container" align="center">
+        <div class="wrapper">
+            <div class="image">
+                <img src="image-qr-code.png" alt="">
+            </div>
+            <div class="text">
+                <b>Improve your frontend skills by building projects</b>
+                <p>Scan the QR code to visit frontend mentor and take your coding skills to the next level.</p>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
