intractive rating component project

--- a/index.html
+++ b/index.html
@@ -4,29 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive rating component</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <title>Document</title>
+<link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div class="card">
-            <div class="image">
-                <img src="image-product-desktop.jpg" alt="image-product-desktop" width="100%">
-            </div>
             <div class="content">
-                <h6>PERFUME</h6>
-                <h2>Gabrielle <br> Essence Eau <br> De Parfume</h1>
-                <p>A floral, solar and voluptuous <br> interpretation composed by <br> Olivier Porge, Perfumer-Creator <br> for the House of CHANEL.</p>
-                <h1>$149.99 <del>$169.99</del></h1>
-                <button><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
-                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                  </svg>Add to Cart</button>
+                <div class="card-header">
+                    <img src="./Image/icon-star.svg" alt="icon-star">
+                </div>
+                <div class="card-body">
+                    <h2>How did we do?</h2>
+                    <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
+                </div>
+                <div class="btn-container">
+                    <button class="btn">1</button>
+                    <button class="btn">2</button>
+                    <button class="btn">3</button>
+                    <button class="btn">4</button>
+                    <button class="btn">5</button>
+                </div>
+                <button class="submit-btn">SUBMIT</button>
             </div>
         </div>
+         <div class="card card-2 hide">
+            <div class="content">
+                <img src="./Image/illustration-thank-you.svg" alt="illustration-thank-you" class="thank-image">
+            </div>
+              <div class="card-body">
+                <p>You selected <span>0</span> out of 5.</p>
+                <h2>Thank you!</h2>
+                <p>We appreciate you taking time to give a rating. If you ever need more support, don't hesitate to get in touch!</p>
+              </div>
     </div>
-    <p>Challenge by <a href="#">Frontend Mentor</a> coded by <a href="#">JoyObaidu</a></p>
+    </div>
+    <div class="authorization">
+        <p>Challenge by <a href="http://frontendmentor.io"> Frontend Mentor</a> designed by JoyObaidu.</p>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
