added aria-hidden "true" to the images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="card">
             <div class="content">
                 <div class="card-header">
-                    <img src="./Image/icon-star.svg" alt="icon-star">
+                    <img src="./Image/icon-star.svg" alt aria-hidden="true">
                 </div>
                 <div class="card-body">
                     <h2>How did we do?</h2>
@@ -33,7 +33,7 @@
         </div>
          <div class="card card-2 hide">
             <div class="content">
-                <img src="./Image/illustration-thank-you.svg" alt="illustration-thank-you" class="thank-image">
+                <img src="./Image/illustration-thank-you.svg" alt aria-hidden="true" class="thank-image">
             </div>
               <div class="card-body">
                 <p>You selected <span>0</span> out of 5.</p>
